--- a/index.html
+++ b/index.html
@@ -1,52 +1,102 @@
 <!DOCTYPE html>
-<html lang="bn">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>অ্যাডমিন প্যানেল</title>
+  <title>Admin Panel</title>
+  <style>
+    .btn {
+      padding: 10px 20px;
+      margin: 5px;
+      background: #007bff;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .card {
+      background: #eee;
+      padding: 10px;
+      border-radius: 5px;
+      margin: 10px;
+    }
+  </style>
 </head>
 <body>
-    <h2>অ্যাডমিন প্যানেল</h2>
-    <input type="text" id="adminCode" placeholder="আপনার Admin Code দিন"><br><br>
-    <button onclick="loadData()">তথ্য দেখুন</button>
+<h1>Admin Panel</h1>
 
-    <div id="dataContainer"></div>
+<h2>Deposit Requests</h2>
+<button onclick="loadDeposit()">Load Deposit</button>
+<div id="depositInfo"></div>
 
-    <script>
-        function loadData() {
-            const code = document.getElementById("adminCode").value;
-            const data = JSON.parse(localStorage.getItem("deposits") || "[]");
-            const container = document.getElementById("dataContainer");
-            container.innerHTML = "";
+<h2>Withdraw Requests</h2>
+<button onclick="loadWithdraw()">Load Withdraw</button>
+<div id="withdrawInfo"></div>
 
-            data.forEach((entry, index) => {
-                if (entry.adminCode === code) {
-                    const div = document.createElement("div");
-                    div.style.border = "1px solid #ccc";
-                    div.style.padding = "10px";
-                    div.style.margin = "10px 0";
+<script>
+const code = "199234";
 
-                    div.innerHTML = `
-                        <p>নাম: ${entry.name}</p>
-                        <p>মোবাইল: ${entry.phone}</p>
-                        <p>পরিমাণ: ${entry.amount}৳</p>
-                        <p>মাধ্যম: ${entry.method}</p>
-                        <p>ট্রানজেকশন আইডি: ${entry.trxid}</p>
-                        <p>স্ট্যাটাস: <strong>${entry.status}</strong></p>
-                        <button onclick="updateStatus(${index}, 'Accepted')">Accept</button>
-                        <button onclick="updateStatus(${index}, 'Rejected')">Reject</button>
-                    `;
+function loadDeposit() {
+  const data = localStorage.getItem("user_" + code);
+  if (!data) return alert("No deposit found.");
+  const user = JSON.parse(data);
+  document.getElementById("depositInfo").innerHTML = `
+    <div class="card">
+      <p><strong>Code:</strong> ${user.code}</p>
+      <p><strong>Txn ID:</strong> ${user.txn}</p>
+      <button class="btn" onclick="acceptUser()">✅ Accept</button>
+      <button class="btn" onclick="rejectUser()">❌ Reject</button>
+    </div>`;
+}
 
-                    container.appendChild(div);
-                }
-            });
-        }
+function acceptUser() {
+  let user = JSON.parse(localStorage.getItem("user_" + code));
+  user.verified = true;
+  user.lastCredited = Date.now();
+  localStorage.setItem("user_" + code, JSON.stringify(user));
+  alert("User verified.");
+  document.getElementById("depositInfo").innerHTML = "";
+}
 
-        function updateStatus(index, status) {
-            let data = JSON.parse(localStorage.getItem("deposits") || "[]");
-            data[index].status = status;
-            localStorage.setItem("deposits", JSON.stringify(data));
-            loadData(); // refresh view
-        }
-    </script>
+function rejectUser() {
+  localStorage.removeItem("user_" + code);
+  alert("User rejected.");
+  document.getElementById("depositInfo").innerHTML = "";
+}
+
+function loadWithdraw() {
+  const data = localStorage.getItem("withdraw_" + code);
+  if (!data) return alert("No withdraw request found.");
+  const req = JSON.parse(data);
+  if (req.status !== "pending") return alert("Already processed.");
+
+  document.getElementById("withdrawInfo").innerHTML = `
+    <div class="card">
+      <p><strong>Method:</strong> ${req.method}</p>
+      <p><strong>Number:</strong> ${req.number}</p>
+      <p><strong>Amount:</strong> ৳${req.amount}</p>
+      <button class="btn" onclick="approveWithdraw()">✅ Accept</button>
+      <button class="btn" onclick="rejectWithdraw()">❌ Reject</button>
+    </div>`;
+}
+
+function approveWithdraw() {
+  let user = JSON.parse(localStorage.getItem("user_" + code));
+  let req = JSON.parse(localStorage.getItem("withdraw_" + code));
+  if (user.balance < req.amount) return alert("Insufficient balance.");
+  user.balance -= req.amount;
+  localStorage.setItem("user_" + code, JSON.stringify(user));
+  req.status = "approved";
+  localStorage.setItem("withdraw_" + code, JSON.stringify(req));
+  alert("Withdraw approved.");
+  document.getElementById("withdrawInfo").innerHTML = "";
+}
+
+function rejectWithdraw() {
+  let req = JSON.parse(localStorage.getItem("withdraw_" + code));
+  req.status = "rejected";
+  localStorage.setItem("withdraw_" + code, JSON.stringify(req));
+  alert("Withdraw rejected.");
+  document.getElementById("withdrawInfo").innerHTML = "";
+}
+</script>
 </body>
 </html>
