--- a/index.html
+++ b/index.html
@@ -3,73 +3,74 @@
 <head>
   <title>Admin Panel - Deposit Requests</title>
   <style>
-    body { font-family: Arial; padding: 20px; background: #f5f5f5; }
+    body { font-family: Arial; padding: 20px; background: #f2f2f2; }
     .container { max-width: 600px; margin: auto; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px #aaa; }
-    .request { border: 1px solid #ddd; padding: 10px; margin-bottom: 10px; border-radius: 5px; }
-    .buttons { margin-top: 10px; }
-    .accept { background: green; color: white; padding: 5px 10px; border: none; margin-right: 5px; cursor: pointer; }
-    .reject { background: red; color: white; padding: 5px 10px; border: none; cursor: pointer; }
+    .request { border: 1px solid #ccc; padding: 15px; border-radius: 5px; margin-bottom: 15px; background: #fff; }
+    .buttons button { margin-right: 10px; padding: 6px 12px; border: none; border-radius: 4px; cursor: pointer; }
+    .accept { background-color: green; color: white; }
+    .reject { background-color: red; color: white; }
   </style>
 </head>
 <body>
 <div class="container">
   <h2>Deposit Requests</h2>
-  <div id="requests"></div>
+  <div id="requestsContainer"></div>
 </div>
 
 <script>
   function loadRequests() {
-    const requestBox = document.getElementById("requests");
-    requestBox.innerHTML = "";
+    const container = document.getElementById('requestsContainer');
+    container.innerHTML = '';
 
-    const depositRequests = JSON.parse(localStorage.getItem("depositRequests") || "[]");
+    const requests = JSON.parse(localStorage.getItem('depositRequests') || '[]');
 
-    if (depositRequests.length === 0) {
-      requestBox.innerHTML = "<p>No deposit requests.</p>";
+    if (requests.length === 0) {
+      container.innerHTML = "<p>No pending requests.</p>";
       return;
     }
 
-    depositRequests.forEach((req, index) => {
-      const div = document.createElement("div");
-      div.className = "request";
+    requests.forEach((req, index) => {
+      const div = document.createElement('div');
+      div.className = 'request';
       div.innerHTML = `
         <strong>UID:</strong> ${req.userId}<br>
         <strong>Method:</strong> ${req.method}<br>
         <strong>Amount:</strong> ৳${req.amount}<br>
-        <strong>Transaction ID:</strong> ${req.trx}<br>
+        <strong>Transaction ID:</strong> ${req.trx}<br><br>
         <div class="buttons">
           <button class="accept" onclick="acceptRequest(${index})">Accept</button>
           <button class="reject" onclick="rejectRequest(${index})">Reject</button>
         </div>
       `;
-      requestBox.appendChild(div);
+      container.appendChild(div);
     });
   }
 
   function acceptRequest(index) {
-    let depositRequests = JSON.parse(localStorage.getItem("depositRequests") || "[]");
-    const req = depositRequests[index];
+    let requests = JSON.parse(localStorage.getItem('depositRequests') || '[]');
+    const req = requests[index];
 
+    // Update user balance
     const balanceKey = `balance_${req.userId}`;
     let currentBalance = parseInt(localStorage.getItem(balanceKey)) || 0;
     currentBalance += parseInt(req.amount);
     localStorage.setItem(balanceKey, currentBalance);
 
-    depositRequests.splice(index, 1); // remove from list
-    localStorage.setItem("depositRequests", JSON.stringify(depositRequests));
+    // Remove request from list
+    requests.splice(index, 1);
+    localStorage.setItem('depositRequests', JSON.stringify(requests));
 
-    alert(`Accepted! ৳${req.amount} added to UID: ${req.userId}`);
+    alert(`Deposit Accepted! ৳${req.amount} added to UID: ${req.userId}`);
     loadRequests();
   }
 
   function rejectRequest(index) {
-    let depositRequests = JSON.parse(localStorage.getItem("depositRequests") || "[]");
-    const req = depositRequests[index];
+    let requests = JSON.parse(localStorage.getItem('depositRequests') || '[]');
+    const req = requests[index];
+    requests.splice(index, 1);
+    localStorage.setItem('depositRequests', JSON.stringify(requests));
 
-    depositRequests.splice(index, 1);
-    localStorage.setItem("depositRequests", JSON.stringify(depositRequests));
-
-    alert(`Rejected request from UID: ${req.userId}`);
+    alert(`Deposit Rejected for UID: ${req.userId}`);
     loadRequests();
   }
 
