--- a/index.html
+++ b/index.html
@@ -1,80 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html lang="bn">
 <head>
-  <title>Admin Panel - Deposit Requests</title>
+  <meta charset="UTF-8">
+  <title>Admin Panel - Hridoy Officials (√)</title>
   <style>
-    body { font-family: Arial; padding: 20px; background: #f2f2f2; }
-    .container { max-width: 600px; margin: auto; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px #aaa; }
-    .request { border: 1px solid #ccc; padding: 15px; border-radius: 5px; margin-bottom: 15px; background: #fff; }
-    .buttons button { margin-right: 10px; padding: 6px 12px; border: none; border-radius: 4px; cursor: pointer; }
-    .accept { background-color: green; color: white; }
-    .reject { background-color: red; color: white; }
+    body { font-family: Arial; background: #f0f2f5; padding: 20px; }
+    .panel { max-width: 500px; margin: auto; background: white; padding: 20px; border-radius: 10px; }
+    input, textarea { width: 100%; margin-top: 10px; padding: 10px; border-radius: 5px; border: 1px solid #ccc; }
+    button { background: #1877f2; color: white; padding: 10px; border: none; border-radius: 5px; margin-top: 15px; cursor: pointer; }
   </style>
 </head>
 <body>
-<div class="container">
-  <h2>Deposit Requests</h2>
-  <div id="requestsContainer"></div>
+
+<div class="panel">
+  <h2>পোস্ট তৈরি করুন</h2>
+  <textarea id="text" placeholder="পোস্টের টেক্সট লিখুন"></textarea>
+  <input type="file" id="file">
+  <button onclick="submitPost()">পোস্ট করুন</button>
+  <div id="status"></div>
 </div>
 
 <script>
-  function loadRequests() {
-    const container = document.getElementById('requestsContainer');
-    container.innerHTML = '';
+function submitPost() {
+  const text = document.getElementById("text").value;
+  const file = document.getElementById("file").files[0];
+  const formData = new FormData();
+  formData.append("text", text);
+  if (file) formData.append("file", file);
 
-    const requests = JSON.parse(localStorage.getItem('depositRequests') || '[]');
-
-    if (requests.length === 0) {
-      container.innerHTML = "<p>No pending requests.</p>";
-      return;
-    }
-
-    requests.forEach((req, index) => {
-      const div = document.createElement('div');
-      div.className = 'request';
-      div.innerHTML = `
-        <strong>UID:</strong> ${req.userId}<br>
-        <strong>Method:</strong> ${req.method}<br>
-        <strong>Amount:</strong> ৳${req.amount}<br>
-        <strong>Transaction ID:</strong> ${req.trx}<br><br>
-        <div class="buttons">
-          <button class="accept" onclick="acceptRequest(${index})">Accept</button>
-          <button class="reject" onclick="rejectRequest(${index})">Reject</button>
-        </div>
-      `;
-      container.appendChild(div);
-    });
-  }
-
-  function acceptRequest(index) {
-    let requests = JSON.parse(localStorage.getItem('depositRequests') || '[]');
-    const req = requests[index];
-
-    // Update user balance
-    const balanceKey = `balance_${req.userId}`;
-    let currentBalance = parseInt(localStorage.getItem(balanceKey)) || 0;
-    currentBalance += parseInt(req.amount);
-    localStorage.setItem(balanceKey, currentBalance);
-
-    // Remove request from list
-    requests.splice(index, 1);
-    localStorage.setItem('depositRequests', JSON.stringify(requests));
-
-    alert(`Deposit Accepted! ৳${req.amount} added to UID: ${req.userId}`);
-    loadRequests();
-  }
-
-  function rejectRequest(index) {
-    let requests = JSON.parse(localStorage.getItem('depositRequests') || '[]');
-    const req = requests[index];
-    requests.splice(index, 1);
-    localStorage.setItem('depositRequests', JSON.stringify(requests));
-
-    alert(`Deposit Rejected for UID: ${req.userId}`);
-    loadRequests();
-  }
-
-  loadRequests();
+  fetch("save_post.php", {
+    method: "POST",
+    body: formData
+  }).then(res => res.text()).then(res => {
+    document.getElementById("status").innerText = res;
+    document.getElementById("text").value = '';
+    document.getElementById("file").value = '';
+  });
+}
 </script>
+
 </body>
 </html>
